<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.58.dsap.spark</groupId>
    <artifactId>spark-demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.7</java.version>
        <scala.version>2.10.5</scala.version>
        <scala.binary.version>2.10</scala.binary.version>
        <PermGen>64m</PermGen>
        <MaxPermGen>512m</MaxPermGen>
        <spark.version>1.6.3</spark.version>
    </properties>

    <repositories>
        <!-- list of other repositories -->
        <repository>
            <id>SparkPackagesRepo</id>
            <url>http://dl.bintray.com/spark-packages/maven</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming-kafka_2.10</artifactId>
            <version>${spark.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.34</version>
        </dependency>

    </dependencies>

    <build>
	    <pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>net.alchim31.maven</groupId>
	                <artifactId>scala-maven-plugin</artifactId>
	                <version>3.2.0</version>
	                <executions>
	                    <execution>
	                        <id>scala-compile-first</id>
	                        <phase>process-resources</phase>
	                        <goals>
	                            <goal>add-source</goal>
	                            <goal>compile</goal>
	                        </goals>
	                    </execution>
	                    <execution>
	                        <id>scala-test-compile</id>
	                        <phase>process-test-resources</phase>
	                        <goals>
	                            <goal>testCompile</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.1</version>
	                <configuration>
	                    <source>${java.version}</source>
	                    <target>${java.version}</target>
	                    <encoding>UTF-8</encoding>
	                    <maxmem>1024m</maxmem>
	                    <fork>true</fork>
	                </configuration>
	            </plugin>
	            <plugin>
	                <groupId>org.scala-tools</groupId>
	                <artifactId>maven-scala-plugin</artifactId>
	                <executions>
	                    <execution>
	                        <goals>
	                            <goal>compile</goal>
	                            <goal>testCompile</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <!--disable surefire-->
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-surefire-plugin</artifactId>
	                <version>2.17</version>
	                <configuration>
	                    <skipTests>true</skipTests>
	                </configuration>
	            </plugin>
	            <!-- enable scalatest -->
	            <plugin>
	                <groupId>org.scalatest</groupId>
	                <artifactId>scalatest-maven-plugin</artifactId>
	                <version>1.0</version>
	                <configuration>
	                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
	                    <junitxml>.</junitxml>
	                    <argLine>-Xmx3g -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=512m</argLine>
	                    <stderr/>
	                    <skipTests>true</skipTests>
	                </configuration>
	                <executions>
	                    <execution>
	                        <id>test</id>
	                        <goals>
	                            <goal>test</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.codehaus.mojo</groupId>
	                <artifactId>build-helper-maven-plugin</artifactId>
	                <executions>
	                    <execution>
	                        <id>add-scala-sources</id>
	                        <phase>generate-sources</phase>
	                        <goals>
	                            <goal>add-source</goal>
	                        </goals>
	                        <configuration>
	                            <sources>
	                                <source>src/main/scala</source>
	                            </sources>
	                        </configuration>
	                    </execution>
	                    <execution>
	                        <id>add-scala-test-sources</id>
	                        <phase>generate-test-sources</phase>
	                        <goals>
	                            <goal>add-test-source</goal>
	                        </goals>
	                        <configuration>
	                            <sources>
	                                <source>src/test/scala</source>
	                            </sources>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.codehaus.mojo</groupId>
	                <artifactId>build-helper-maven-plugin</artifactId>
	                <executions>
	                    <execution>
	                        <id>add-java-sources</id>
	                        <phase>generate-sources</phase>
	                        <goals>
	                            <goal>add-source</goal>
	                        </goals>
	                        <configuration>
	                            <sources>
	                                <source>src/main/java</source>
	                            </sources>
	                        </configuration>
	                    </execution>
	                    <execution>
	                        <id>add-java-test-sources</id>
	                        <phase>generate-test-sources</phase>
	                        <goals>
	                            <goal>add-test-source</goal>
	                        </goals>
	                        <configuration>
	                            <sources>
	                                <source>src/test/java</source>
	                            </sources>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	
	            <!-- Use the assembly plugin to create a big JAR with all the dependencies -->
	            <!--
	            <plugin>
	                <artifactId>maven-assembly-plugin</artifactId>
	                <configuration>
	                    <descriptorRefs>
	                        <descriptorRef>jar-with-dependencies</descriptorRef>
	                    </descriptorRefs>
	                </configuration>
	                <executions>
	                    <execution>
	                        <id>make-assembly</id>
	                        <phase>package</phase>
	                        <goals>
	                            <goal>single</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            -->
	            <!-- Use the shade plugin to create a big JAR with all the dependencies -->
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-shade-plugin</artifactId>
	                <configuration>
	                    <shadedArtifactAttached>true</shadedArtifactAttached>
	                    <artifactSet>
	                        <includes>
	                            <include>*:*</include>
	                        </includes>
	                    </artifactSet>
	                    <filters>
	                        <filter>
	                            <artifact>*:*</artifact>
	                            <excludes>
	                                <exclude>META-INF/*.SF</exclude>
	                                <exclude>META-INF/*.DSA</exclude>
	                                <exclude>META-INF/*.RSA</exclude>
	                                <exclude>**/log4j.properties</exclude>
	                            </excludes>
	                        </filter>
	                    </filters>
	                </configuration>
	                <executions>
	                    <execution>
	                        <phase>package</phase>
	                        <goals>
	                            <goal>shade</goal>
	                        </goals>
	                        <configuration>
	                            <finalName>${project.artifactId}-${project.version}</finalName>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	        </plugins>
	    </pluginManagement>
    </build>
</project>
